# TerrainModeller

./: .gitignore  CMakeLists.txt  TerrainPatches.cont  TerrainPatches.eval  TerrainPatches.frag  TerrainPatches.geom  TerrainPatches.vert  loadTGA.h  main.cpp
heightMaps/: Terrain_hm_01.tga
images/: water01.tga
